Fix a scroll jumping issue if you are in full screen

--- a/style.scss
+++ b/style.scss
@@ -69,6 +69,8 @@ body #home {
         margin-left: 20px;
         margin-right: 20px;
 
+        min-height: 100vh;
+
         h3 a{
             color: white;
             text-decoration: underline;
